packages/docusaurus-theme-search/src/theme/SearchBar/index.module.css
.MarkpromptButton {
  all: unset;
  display: flex;
  cursor: pointer;
  border-radius: 99999px;
  color: var(--markprompt-primaryForeground);
  background-color: var(--markprompt-primary);
  padding: 0.75rem;
  position: fixed;
  bottom: 2rem;
  right: 2rem;
  transition-property: opacity;
  transition-duration: 200ms;
}

.MarkpromptButton:hover {
  opacity: 0.8;
}

.MarkpromptIcon {
  width: 1.25rem;
  height: 1.25rem;
}

.MarkpromptOverlay {
  position: fixed;
  inset: 0;
  animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
  background-color: var(--markprompt-overlay);
  z-index: calc(var(--ifm-z-index-fixed) + 1);
}

.MarkpromptContent {
  background-color: var(--markprompt-background);
  border-radius: var(--markprompt-radius);
  border: 1px solid var(--markprompt-border);
  box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px,
    hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 80vw;
  max-width: 600px;
  height: calc(100vh - 200px);
  max-height: 600px;
  animation-name: contentShow;
  animation-duration: 300ms;
  animation-fill-mode: both;
  transition-timing-function: cubic-bezier(0.25, 0.4, 0.55, 1.4);
  color: var(--markprompt-foreground);
  overflow: hidden;
  display: grid;
  grid-template-rows: auto 1fr;
}

.MarkpromptClose {
  all: unset;
  position: absolute;
  top: 0.75rem;
  right: 0.75rem;
  color: var(--markprompt-foreground);
  width: var(--markprompt-button-icon-size);
  height: var(--markprompt-button-icon-size);
  padding: 0.25rem;
  border-radius: 4px;
  cursor: pointer;
  display: grid;
  place-items: center;
  transition-property: box-shadow;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.MarkpromptClose:hover {
  opacity: 0.8;
}

.MarkpromptClose:focus {
  box-shadow: inset 0 0 0 2px var(--markprompt-primary);
}

.MarkpromptSearchIcon {
  position: absolute;
  top: 1rem;
  left: 1.25rem;
  color: var(--markprompt-foreground);
  width: var(--markprompt-button-icon-size);
  height: var(--markprompt-button-icon-size);
  cursor: pointer;
  display: grid;
  place-items: center;
}

.MarkpromptTitle {
  margin-block-start: 0;
}

.MarkpromptPrompt {
  border-left: none !important;
  border-right: none !important;
  border-top: none !important;
  outline: none !important;
  border-bottom: 1px solid var(--markprompt-border);
  box-shadow: none;
  width: 100%;
  padding-left: 3.5rem;
  padding-right: 3.5rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  font-size: var(--markprompt-text-size);
  background-color: var(--markprompt-background);
  color: var(--markprompt-foreground);
  caret-color: var(--markprompt-primary);
}

.MarkpromptPrompt:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
  box-shadow: none;
}

.MarkpromptPrompt::placeholder {
  color: var(--markprompt-mutedForeground);
}

.MarkpromptPrompt:focus {
  outline: 2px solid var(--markprompt-mutedForeground);
}

.MarkpromptReferences {
  background-color: var(--markprompt-muted);
  color: var(--markprompt-mutedForeground);
  border-top: 1px solid var(--markprompt-border);
}

.MarkpromptAnswer {
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
  padding: 1rem 2rem;
  scroll-behavior: smooth;
  -ms-overflow-style: none;
  scrollbar-width: none;
  font-size: var(--markprompt-text-size);
}
.MarkpromptAnswer::-webkit-scrollbar {
  display: none;
}
.MarkpromptAnswer :not(:last-child) .caret {
  display: none;
}
.MarkpromptAnswer {
  color: var(--markprompt-foreground);
  max-width: 65ch;
  font-size: 0.875rem;
  line-height: 1.7142857;
}
.MarkpromptAnswer p {
  margin-top: 1.1428571em;
  margin-bottom: 1.1428571em;
}
.MarkpromptAnswer a {
  color: var(--markprompt-primary);
  text-decoration: underline;
  font-weight: 500;
}
.MarkpromptAnswer strong {
  font-weight: 600;
}
.MarkpromptAnswer a strong {
  color: inherit;
}
.MarkpromptAnswer blockquote strong {
  color: inherit;
}
.MarkpromptAnswer thead th strong {
  color: inherit;
}
.MarkpromptAnswer ol {
  list-style-type: decimal;
  margin-top: 1.1428571em;
  margin-bottom: 1.1428571em;
  padding-left: 1.5714286em;
}
.MarkpromptAnswer ol[type='A'] {
  list-style-type: upper-alpha;
}
.MarkpromptAnswer ol[type='a'] {
  list-style-type: lower-alpha;
}
.MarkpromptAnswer ol[type='A' s] {
  list-style-type: upper-alpha;
}
.MarkpromptAnswer ol[type='a' s] {
  list-style-type: lower-alpha;
}
.MarkpromptAnswer ol[type='I'] {
  list-style-type: upper-roman;
}
.MarkpromptAnswer ol[type='i'] {
  list-style-type: lower-roman;
}
.MarkpromptAnswer ol[type='I' s] {
  list-style-type: upper-roman;
}
.MarkpromptAnswer ol[type='i' s] {
  list-style-type: lower-roman;
}
.MarkpromptAnswer ol[type='1'] {
  list-style-type: decimal;
}
.MarkpromptAnswer ul {
  list-style-type: disc;
  margin-top: 1.1428571em;
  margin-bottom: 1.1428571em;
  padding-left: 1.5714286em;
}
.MarkpromptAnswer ol > li::marker {
  font-weight: 400;
  color: var(--markprompt-foreground);
}
.MarkpromptAnswer ul > li::marker {
  color: var(--markprompt-mutedForeground);
}
.MarkpromptAnswer hr {
  border-color: var(--markprompt-border);
  border-top-width: 1;
  margin-top: 2.8571429em;
  margin-bottom: 2.8571429em;
}
.MarkpromptAnswer blockquote {
  font-weight: 500;
  font-style: italic;
  color: var(--markprompt-foreground);
  border-left-width: 0.25rem;
  border-left-color: var(--markprompt-border);
  quotes: '\201C''\201D''\2018''\2019';
  margin-top: 1.3333333em;
  margin-bottom: 1.3333333em;
  padding-left: 1.1111111em;
}
.MarkpromptAnswer blockquote p:first-of-type::before {
  content: open-quote;
}
.MarkpromptAnswer blockquote p:last-of-type::after {
  content: close-quote;
}
.MarkpromptAnswer h1 {
  color: var(--markprompt-foreground);
  font-weight: 800;
  font-size: 2.1428571em;
  margin-top: 0;
  margin-bottom: 0.8em;
  line-height: 1.2;
}
.MarkpromptAnswer h1 strong {
  font-weight: 900;
  color: inherit;
}
/* ... */

